--- a/pom.xml
+++ b/pom.xml
@@ -1,3 +1,5 @@
+
+      
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>Spark-Cassandra-Mqtt</groupId>
@@ -53,19 +55,46 @@
 
 
     </dependencies>
-<build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.2</version>
-        <configuration>
-          <source>1.7</source>
-          <target>1.7</target>
-        </configuration>
-      </plugin>
 
-      <plugin>
+   
+    <build>
+
+        <plugins>
+
+            <plugin>
+
+                <groupId>org.apache.maven.plugins</groupId>
+
+                <artifactId>maven-compiler-plugin</artifactId>
+
+                <version>2.3.2</version>
+
+                <configuration>
+
+                    <source>1.7</source>
+
+                    <target>1.7</target>
+
+                </configuration>
+
+            </plugin>
+
+            <plugin>
+
+                <groupId>org.apache.maven.plugins</groupId>
+
+                <artifactId>maven-jar-plugin</artifactId>
+
+                <version>2.4</version>
+
+                <configuration>
+
+                   
+
+                </configuration>
+
+            </plugin>
+<plugin>
         <artifactId>maven-assembly-plugin</artifactId>
 
         <configuration>
@@ -89,8 +118,39 @@
           </execution>
         </executions>
       </plugin>      
-    </plugins>
-    
-  </build>
-  
+            <plugin>
+
+                <groupId>org.apache.maven.plugins</groupId>
+
+                <artifactId>maven-dependency-plugin</artifactId>
+
+                <executions>
+
+                    <execution>
+
+                        <id>copy</id>
+
+                        <phase>install</phase>
+
+                        <goals>
+
+                            <goal>copy-dependencies</goal>
+
+                        </goals>
+
+                        <configuration>
+
+                            <outputDirectory>${project.build.directory}/lib</outputDirectory>
+
+                        </configuration>
+
+                    </execution>
+
+                </executions>
+
+            </plugin>
+
+        </plugins>
+
+    </build>  
 </project>
